Добавил генератор событий, обернул его в докер. Добавил шаблон для остальных событий. Подправил таблицы в постгрес и админку под них.

--- a/email_templates/welcome.html
+++ b/email_templates/welcome.html
@@ -10,7 +10,7 @@
 		</div>
 		<div style="width: 100%; background: #f0f5f8; border-radius: 10px; margin-top: 10px; padding: 10px;">
 			<h2 style="color: #0474ff;">
-				Здравствуйте, {user_name}!
+				Здравствуйте, {{user_name}}!
 			</h2>
 			<p style="width: 95%; margin: 10px auto; font-size: 18px;">
 				Мы рады, что вы присоеденились к числу зрителей Practix.<br>
@@ -20,7 +20,7 @@
 				Для подтверждения электронной почты нажмите кнопку ниже
 			</p>
 			<p style="width: 40%; color: white; margin: 0 auto;">
-				<a style="text-decoration: none;" href="{link}">ПОДТВЕРДИТЬ</a>
+				<a style="text-decoration: none;" href="{{link}}">ПОДТВЕРДИТЬ</a>
 			</p>
 			<p>
 				<b>
